added controllers to enhance resume with ai

--- a/server/package.json
+++ b/server/package.json
@@ -13,16 +13,22 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@google/genai": "^1.38.0",
     "@imagekit/nodejs": "^7.2.0",
+    "ai": "^6.0.42",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.2",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "open": "^11.0.0",
+    "openai": "^6.16.0"
   },
   "devDependencies": {
+    "eslint": "^9.39.2",
+    "eslint-plugin-import": "^2.32.0",
     "nodemon": "^3.1.11"
   }
 }
